# dotGhost_linux64

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  config.ini  run.sh  start.sh  update.sh
src/: CMakeLists.txt  Makefile  config.cpp  config.h  config.ini  dotaim.cpp  dotaim.h  dotglow.cpp  dotglow.h  dottrigger.cpp  dottrigger.h  engine.h  helper.cpp  main.cpp  offsets.cpp  offsets.h
src/utils/: _thread.cpp  _thread.h  utils.h
